--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".cp">
+            <!-- Spécifiez des attributs supplémentaires de l'activité si nécessaire -->
+        </activity>
+
+
+        <activity android:name=".act">
+            <!-- Spécifiez des attributs supplémentaires de l'activité si nécessaire -->
+        </activity>
     </application>
 
 </manifest>
